# graphbook-examples

./: .gitignore  LICENSE  README.md  pyproject.toml
image_segmentation/: ImageSegmentation.json  Workflow.json
image_segmentation/custom_nodes/: bg_remover.py  load_image_dataset.py  nodes.py
pokemon_classifer/: PokemonClassifier.json  Workflow.json
pokemon_classifer/custom_nodes/: nodes.py
simple_workflow/: SimpleWorkflow.json  Workflow.json
simple_workflow/custom_nodes/: nodes.py
