[tool.poetry]
name = "graphbook-examples"
version = "0.1.0"
description = ""
authors = ["Richard Franklin <rsamf@graphbook.ai>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
graphbook = "^0.5"
transformers = "^4.43.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
